# image_processing

./: .gitignore  face.py  gradio_test.py  gradio_test_7861.py  process.py  utils.py
est_models/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
est_models/.github/workflows/: push.yaml
est_models/docs/: README.md
est_models/docs/models/: README.md
est_models/docs/pipelines/: README.md
est_models/requirements/: matting_requirements.txt
est_models/scripts/: segformer_run.py
est_models/src/est_models/: __init__.py
est_models/src/est_models/models/: __init__.py
est_models/src/est_models/models/bisenetv2/: __init__.py  configuration_bisenetv2.py  image_processing_bisenetv2.py  modeling_bisenetv2.py
est_models/src/est_models/models/ppmattingv2/: __init__.py  image_processing_ppmattingv2.py  modeling_onnx_ppmatingv2.py
est_models/src/est_models/models/segformer/: __init__.py  image_processing_segformer.py
est_models/src/est_models/pipelines/: __init__.py  clip_text_custom_embedder.py  hair_color_utils.py  webui_utils.py
est_models/src/est_models/pipelines/controlnet/: __init__.py  pipeline_controlnet_fill_inpaint.py
est_models/src/est_models/pipelines/stable_diffusion/: __init__.py  pipeline_stable_diffusion_fill_inpaint.py  pipeline_stable_diffusion_inpaint.py  pipeline_tensorrt_stable_diffusion_fill_inpaint.py  (+1 more)
est_models/src/est_models/utils/: __init__.py  import_utils.py
est_models/tests/: test_import.py  test_models.py  test_pipeline.py  test_pipeline_cpu.py  test_trt_pipeline.py
segment_anything2/: setup.py
(+14 files in other folders)
